DotAligner v2: STEP 1: global alignment (Needleman-Wunsch algorithm) of sequences by scoring sequence similarity and unpaired probabilities STEP 2: get suboptimal sequence/unpaired probability alignment by probabilistic backtracking through scoring matrix STEP 3: get similarity of pairs of dotplots corresponding to suboptimal alignment

--- a/paper/dotaligner_v2.tex
+++ b/paper/dotaligner_v2.tex
@@ -120,7 +120,7 @@ of structure-based alignments. The programs \pmcomp{} for pairwise and
 \pmmulti{} for multiple alignments \cite{Hofacker15073017}, as well as
 \locarna{} \cite{Will17432929} score the alignment based on the notion of a
 common secondary structure. Despite of the usage of the basepair probability
-matrices extract these methods the maximum-weight common secondary structure but
+matrices these methods extract the maximum-weight common secondary structure but
 do not explicitely consider suboptimal structures in the alignment. The pairwise
 alignment of basepair probability matrices (dot plots) has been first introduced
 by \carna{} \cite{Palu2010,Sorescu2012}. \carna{} finds iterativelly better
